fix [#37078] Search props don't react on click at the right end (where 'X' is if field not empty)